# TicTacToeAI

./: CMakeLists.txt
.github/workflows/: build.yml
include/tictactoe/: Board.hpp  RandomPlayer.hpp
src/: Board.cpp  Board.hpp  CMakeLists.txt  Player.cpp  Player.hpp  QPlayer.cpp  QPlayer.hpp  RandomPlayer.cpp  RandomPlayer.hpp  main.cpp
tests/: CMakeLists.txt  test_Board.cpp
